I corrected some gap issue, adding more flav

--- a/css/index.css
+++ b/css/index.css
@@ -181,6 +181,15 @@
     BODY PART  
 
   */
+  .click{
+    margin: 0 auto;
+    top:1%;
+    left: 35%;
+    font-size: 10px;
+    color: rgb(87, 69, 225);
+    position: absolute;
+    font-weight: bold;
+  }
 
   .about-me__info--container{
       display: flex;
@@ -188,6 +197,12 @@
       text-align: center;
       margin: 0 auto;
       align-items: center;
+  }
+
+  .container-2{
+    margin-top: 1.3em;
+    background-color: #b4b4b80f;
+    margin-bottom: 1em;
   }
 
   .row{
@@ -321,6 +336,9 @@
   opacity: 1;
   transform: translateY(0%);
   border-radius: 3em;
+}
+.child--help:hover .click{
+  display: none;
 }
 
 .child--help:hover img{
@@ -543,7 +561,7 @@
   }
   
   /* Small phones, tablets, large smartphones */
-  @media (max-width: 768px) {
+  @media (max-width: 810px) {
     nav {
       height: 68px;
     }
@@ -570,43 +588,7 @@
     }
   }
   
-  /* SMALL PHONES */
-  /* @media (max-width: 480px) {
-    .nav__link:not(:last-child) {
-      display: none;
-    }
-
   
-    .project__wrapper {
-      border-radius: 0;
-    }
-  
-    .project__description {
-      padding: 0;
-      left: 0;
-      width: 100%;
-    }
-  
-    .project__description--para {
-      display: none;
-    }
-  
-    .project__description--links {
-      display: flex;
-      justify-content: center;
-    }
-  
-    .project__description--title {
-      font-size: 32px;
-      line-height: 1;
-      text-align: center;
-    }
-  
-    .project__description--sub-title {
-      text-align: center;
-      margin: 12px 0;
-    }
-  } */
 
   @media (max-width:810px) {
     .personal__logo{
@@ -637,6 +619,10 @@
     .language__name{
       opacity: 1;
       font-size: 0.9rem;
+    }
+    #about-me{
+      min-height: 90vh;
+      padding-bottom: 5px;
     }
 
   }
